--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 <!--		spring boot-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
@@ -36,7 +40,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-<!--		lombok-->
+
+		<!--		lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
