All logs are printed to console and store in app.log file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.mail.username=email@email.com
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Configure log file paths and names
+logging.file.path=/var/log/myapp
+logging.file.name=app.log
+
+# Set log levels
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+
+# Set log patterns
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
