--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ logging.file.name=app.log
 
 # Set log levels
 logging.level.root=INFO
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 # Set log patterns
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
