Database now persists objects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,16 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 # Set log patterns
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Configure the H2 database
+spring.datasource.url=jdbc:h2:file:/mydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Create a table in the H2 database
+spring.jpa.hibernate.ddl-auto=update
+
+# Configure logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
